--- a/首页.html
+++ b/首页.html
@@ -86,6 +86,12 @@
         <div class="smalldiv">初中小故事</div>
     </div>
 </div>
+<div class="bigbigdiv" id='div5'>
+    <div class="bigdiv">
+        <img src="picture/psc (16).jpg">
+        <div class="smalldiv">二人世界</div>
+    </div>
+</div>
 </body>
 <script>
   
@@ -100,6 +106,9 @@
     })
     div4.addEventListener("click",()=>{
         location.href='trace.html'
+    })
+    div5.addEventListener("click",()=>{
+        location.href='./twopeople.html'
     })
 </script>
 </html>
