--- a/首页.html
+++ b/首页.html
@@ -88,8 +88,14 @@
 </div>
 <div class="bigbigdiv" id='div5'>
     <div class="bigdiv">
-        <img src="picture/psc (11).jpg">
+        <img src="picture/psc (16).jpg">
         <div class="smalldiv">二人世界</div>
+    </div>
+</div>
+<div class="bigbigdiv" id='div6'>
+    <div class="bigdiv">
+        <img src="picture/psc躺.jpg">
+        <div class="smalldiv">悄悄话</div>
     </div>
 </div>
 </body>
@@ -110,5 +116,9 @@
     div5.addEventListener("click",()=>{
         location.href='./twopeople.html'
     })
+    div6.addEventListener("click",()=>{
+        location.href='./question.html'
+    })
+
 </script>
 </html>
