--- a/首页.html
+++ b/首页.html
@@ -88,7 +88,7 @@
 </div>
 <div class="bigbigdiv" id='div5'>
     <div class="bigdiv">
-        <img src="picture/psc (11).jpg">
+        <img src="picture/psc (16).jpg">
         <div class="smalldiv">二人世界</div>
     </div>
 </div>
@@ -96,6 +96,12 @@
     <div class="bigdiv">
         <img src="picture/psc躺.jpg">
         <div class="smalldiv">悄悄话</div>
+    </div>
+</div>
+<div class="bigbigdiv" id='div7'>
+    <div class="bigdiv">
+        <img src="picture/logo.png">
+        <div class="smalldiv">我的脑子</div>
     </div>
 </div>
 </body>
@@ -118,6 +124,9 @@
     })
     div6.addEventListener("click",()=>{
         location.href='./question.html'
+    })
+    div7.addEventListener("click",()=>{
+        location.href='./myHead.html'
     })
 
 </script>
